--- a/Kube/cluster-ingress.yaml
+++ b/Kube/cluster-ingress.yaml
@@ -5,15 +5,15 @@ metadata:
   namespace: ingress-basic
   annotations:
     kubernetes.io/ingress.class: nginx
-#    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-staging
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-#  tls:
-#  - hosts:
-#    - aks-demo-bs23.eastus.cloudapp.azure.com
-#    secretName: aks-demo-bs23-eastus-cloudapp-azure-com
+  tls:
+  - hosts:
+    - saory3.eastus.cloudapp.azure.com
+    secretName: saory3-eastus-cloudapp-azure-com-cert-staging
   rules:
-  - host: sufian-aks-ingress.eastus.cloudapp.azure.com
+  - host: saory3.eastus.cloudapp.azure.com
     http:
       paths:
       - backend:
