--- a/AKS/Services/HelloWorld/appsettings.json
+++ b/AKS/Services/HelloWorld/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Hello": {
+    "Message":  "Hello from App settings.json"
+  }
 }
